<resources>

    <!--xml 에서 사용되는 string 모임.-->
    <string name="app_name">FOR URTH</string>

    <!--login-->
    <string name="text_login_email">이메일</string>
    <string name="text_login_password">패스워드</string>
    <string name="text_login">로그인</string>
    <string name="text_or">or</string>
    <string name="text_google_login">구글 계정으로\n시작하기</string>
    <string name="text_email_login">이메일로 \n회원가입</string>
    <string name="text_login_alert_text">정보를 모두 입력해주세요.</string>
    <string name="text_information_check">정보를 확인해주세요.</string>

    <!--sign up-->
    <string name="text_sign_up_title">지구를 위하는 당신을\n기다리고 있었어요</string>
    <string name="text_sign_up_name">이름</string>
    <string name="text_sign_up_email">이메일</string>
    <string name="text_sign_up_password">패스워드</string>
    <string name="text_sign_up_password_check">패스워드 확인</string>
    <string name="text_sign_up">
        <u>회원가입</u>
    </string>

    <!--field select-->
    <string name="text_field_select_title">어떤 분야의\n환경보호에 관심이 있나요?</string>
    <string name="text_field_select_button">관심사 선택완료</string>

    <!--main-->
    <string name="text_main_tab">메인</string>
    <string name="text_main_mission">미션</string>
    <string name="text_main_article">아티클</string>
    <string name="text_main_my">마이</string>
    <string name="text_main_item_title">지역 농산물 이용하기</string>
    <string name="text_main_item_contents">지역에서 생산된 농산물을 구입해봐요!</string>
    <string name="text_main_earth_state_mock">너무 뜨거워요\n저 좀 살려주세요…!!!!!!!</string>
    <string name="text_main_dudeaji">두더지</string>
    <string name="text_main_nim">님</string>


    <!--mission-->
    <string name="text_mission_title">오늘 미션을 \n선택해주세요!</string>
    <string name="text_mission_content_title">갈 곳 잃은 북극곰을 구해주세요</string>
    <string name="text_mission_select">미션 선택하기</string>
    <string name="text_mission_start">미션 시작하기</string>
    <string name="text_mission_select_title">실천하는 그린 라이프</string>

    <!--mission complete-->
    <string name="text_mission_complete_before">이전으로</string>
    <string name="text_mission_complete_write_hint">오늘 하루의 미션일기를 담아주세요.</string>

    <!--mission detail-->
    <string name="text_mission_detail_content_mock">옆 동네 토마토를 가져오기 위해서는 많은 연료가 필요하다고 해요! 토마토가 우리의 식탁에 오르기까지의 이산화탄소를 줄이기
        위해 지역농산품을 이용해봐요!"
    </string>
    <string name="text_mission_detail_title_mock">지역 농산물 이용하기</string>
    <string name="text_mission_detail_cancel">그만두기</string>
    <string name="text_mission_detail_complete">미션 완료하기</string>
    <string name="text_mission_detail_mock_data">- 농산물 직거래 장터에서 농산물을 직접 구입\n- 지역에서 생산된 농산물을 구입</string>

    <!--My page-->
    <string name="text_my_page_achieve_list">달성리스트</string>
    <string name="text_my_page_scrap_list">스크랩목록</string>
    <string name="text_my_page_alarm">알람설정</string>
    <string name="text_my_page_mission_suggest">미션 제안하기</string>
    <string name="text_my_page_current_version">현재 버전 1.0.0</string>
    <string name="text_my_page_log_out">로그아웃</string>
    <string name="text_my_page_alarm_receive">미션시작 알람받기</string>
    <string name="text_my_page_alarm_time_set">알람시간설정</string>
    <string name="text_my_page_alarm_time_save">저장하기</string>
    <string name="text_my_page_scrap_list_title">스크랩</string>
    <string name="text_my_page_achieve_list_title">달성했어요!</string>


    <string name="text_article_title">For Earth</string>
    <string name="text_article_show_more">더보기</string>
    <string name="text_article_sub_title">For Us</string>

    <!--관심도 설정-->
    <string name="text_field_air_pollution">대기오염</string>
    <string name="text_field_water_pollution">수질오염</string>
    <string name="text_field_ground_pollution">토양오염</string>
    <string name="text_field_global_warming">지구온난화</string>
    <string name="text_field_saving_energy">에너지절약</string>
    <string name="text_field_desert">사막화</string>
    <string name="text_field_acid_rain">산성비</string>
    <string name="text_field_weather_change">기후변화</string>
    <string name="text_field_endangered_species_">멸종위기 동물</string>
    <string name="text_check">확인</string>

    <!--온보딩 페이지-->
    <string name="text_on_boarding_skip">건너뛰기</string>


</resources>
