<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_main"
            android:icon="@drawable/animation_main_drawable"
            android:title="@string/text_main_tab"
    />

    <item
            android:id="@+id/navigation_mission"
            android:icon="@drawable/animation_mission_drawable"
            android:title="@string/text_main_mission"
    />

    <item
            android:id="@+id/navigation_article"
            android:icon="@drawable/animation_article_drawable"
            android:title="@string/text_main_article"
    />

    <item
            android:id="@+id/navigation_my"
            android:icon="@drawable/animation_my_drawable"
            android:title="@string/text_main_my"
    />

</menu>