<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
                name="vm"
                type="app.woovictory.forearthforus.vm.account.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/loginParent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/fe_fu_white"
            android:onClick="@{()->vm.clickToLayout()}"
            tools:context=".view.account.LoginActivity">


        <ImageView
                android:id="@+id/loginLogoImage"
                android:layout_width="80dp"
                android:layout_height="66dp"
                android:gravity="center"
                android:src="@drawable/logo_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.137" />

        <EditText
                android:id="@+id/loginEmailEt"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_56dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:hint="@string/text_login_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginLogoImage" />

        <EditText
                android:id="@+id/loginPasswordEt"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_16dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:hint="@string/text_login_password"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginEmailEt" />

        <Button
                android:id="@+id/loginButton"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="@dimen/margin_24dp"
                android:layout_marginTop="@dimen/margin_32dp"
                android:layout_marginEnd="@dimen/margin_24dp"
                android:foreground="?selectableItemBackgroundBorderless"
                android:onClick="@{()-> vm.clickToLogin()}"
                android:stateListAnimator="@null"
                android:text="@string/text_login"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginPasswordEt" />

        <TextView
                android:id="@+id/loginEmail"
                style="@style/ContentsBodyMintCenterStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_32dp"
                android:gravity="center_horizontal"
                android:onClick="@{()->vm.clickToSignActivity()}"
                android:padding="@dimen/margin_8dp"
                android:text="@string/text_sign_up"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
