<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="vm" type="app.woovictory.forearthforus.vm.mission.MissionDetailViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:context=".view.mission.MissionDetailActivity">

        <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/missionDetailAppbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/AppTheme.AppBarOverlay"
                android:fitsSystemWindows="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/missionDetailCollapsingToolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:contentScrim="@color/fe_fu_white"
            >

                <ImageView
                        android:id="@+id/missionDetailImage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fufe_illust_jh_04"
                        app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/missionDetailToolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:popupTheme="@style/AppTheme.PopupOverlay"
                        app:layout_collapseMode="pin"/>


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                    android:layout_marginTop="@dimen/margin_32dp"
                    android:layout_marginStart="@dimen/margin_32dp"
                    android:layout_marginEnd="@dimen/margin_32dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="200dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/missionDetailTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/fe_fu_black"
                        android:text="@string/text_mission_detail_title_mock"
                        style="@style/TitleBlackStyle"
                />

                <TextView
                        android:layout_marginTop="6dp"
                        style="@style/ContentsBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_mission_detail_content_mock"
                />

                <View
                        android:layout_marginTop="@dimen/margin_16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#e3e3e3"/>

                <TextView
                        android:layout_marginTop="@dimen/margin_32dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/DetailContentsBodyStyle"
                        android:text="옆 동네 토마토를 먹으면,"
                />

                <TextView
                        android:layout_marginTop="@dimen/margin_8dp"
                        style="@style/ContentsBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="전국 방방곡곡 및 전세계에서 농산물을 실어 나르려면 연료가 많이 들어요. 이렇게 연료를 지나치게 많이 사용하는 것은 대기 오염의 원인이 된답니다."
                />

                <TextView
                        android:layout_marginTop="@dimen/margin_32dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/DetailContentsBodyStyle"
                        android:text="미션 방식"
                />

                <TextView
                        android:layout_marginTop="@dimen/margin_8dp"
                        style="@style/ContentsBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_mission_detail_mock_data"
                />

                <TextView
                        android:layout_marginTop="@dimen/margin_32dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="미션 효과"
                        style="@style/DetailContentsBodyStyle"
                />

                <TextView
                        android:layout_marginTop="@dimen/margin_8dp"
                        style="@style/ContentsBodyStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_mission_detail_mock_data"
                />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <RelativeLayout
                android:id="@+id/missionDetailSelectButtonLayout"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/border_button_background_active"
                android:visibility="visible">

            <TextView
                    style="@style/ButtonWhiteCenterStyle"
                    android:layout_centerInParent="true"
                    android:text="@string/text_mission_select"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

        <LinearLayout
                android:id="@+id/missionDetailDecideButtonLayout"
                android:layout_gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:visibility="gone"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/missionDetailGiveUpButton"
                    style="@style/ButtonWhiteCenterStyle"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/text_mission_detail_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/fe_fu_gray"/>

            <TextView
                    android:id="@+id/missionDetailCompleteButton"
                    style="@style/ButtonWhiteCenterStyle"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/text_mission_detail_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/fe_fu_main"/>

        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
